--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "print"
   ],
   "author": "molefrog",
-  "license": "ISC",
+  "license": "MIT",
   "gypfile": true,
   "devDependencies": {
     "cli-table": "~0.2.0"
