--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cupsnode",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "repository" : "https://github.com/molefrog/cupsnode",
   "description": "CUPS native bindings for node.js",
   "main": "index.js",
   "scripts": {
